Links attributes changed to _blank

--- a/venues.html
+++ b/venues.html
@@ -24,7 +24,7 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite1}}" 
+        <a class="sqr" title="{{section1.titreSite1}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
                   {% else %} {{ section1.lienSite1En }} {% endif %}'>
           <div class="inside">
@@ -45,7 +45,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite2}}"
+        <a class="sqr" title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
           {% else %} {{ section1.lienSite2En }} {% endif %}'>
           <div class="inside">
@@ -66,7 +66,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite3}}"
+        <a class="sqr" title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
           {% else %} {{ section1.lienSite3En }} {% endif %}'>
           <div class="inside">
@@ -87,7 +87,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite4}}"
+        <a class="sqr" title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
           {% else %} {{ section1.lienSite4En }} {% endif %}'>
           <div class="inside">
@@ -132,7 +132,7 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite1}}"
+        <a class="sqr" title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
           {% else %} {{ section2.lienSite1En }} {% endif %}'>
           <div class="inside">
@@ -153,7 +153,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite2}}"
+        <a class="sqr" title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
           {% else %} {{ section2.lienSite2En }} {% endif %}'>
           <div class="inside">
@@ -174,7 +174,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite3}}"
+        <a class="sqr" title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
           {% else %} {{ section2.lienSite3En }} {% endif %}'>
           <div class="inside">
@@ -195,7 +195,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite4}}"
+        <a class="sqr" title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
           {% else %} {{ section2.lienSite4En }} {% endif %}'>
           <div class="inside">
