McDonald's logo changed to Intel's

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ layout: default
                 <img src="/images/cio-partners/GE_logo_200.png" alt="GE">
             </li>
             <li>
-                <img src="/images/cio-partners/Mcdonalds_logo_200.png" alt="McDonald's">
+                <img src="/images/cio-partners/Intel_logo_200.png" alt="Intel">
             </li>
             <li>
                 <img src="/images/cio-partners/Omega_logo_200.png" alt="Omega">
