4th title added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
         <h1 class="the_claim">{% t pages.index.title1.part1 %}<br/><span class="accent">{% t pages.index.title1.part2 %}</span></h1>
         <h1 class="the_claim">{% t pages.index.title2.part1 %}<br/><span class="accent">{% t pages.index.title2.part2 %}</span></h1>
         <h1 class="the_claim">{% t pages.index.title3.part1 %}<br/><span class="accent">{% t pages.index.title3.part2 %}</span></h1>
+        <h1 class="the_claim">{% t pages.index.title4.part1 %}<br/><span class="accent">{% t pages.index.title4.part2 %}</span></h1>
     </div>
 </div>
 <div class="news_section">
