Added more news link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@ layout: default
             </div>
             {% endfor %}
         </div>
+        <div class="more-news-button">
+            <a rel="noopener noreferrer" href="https://www.lausanne2020.com/fr/news">
+                <p class="news_more">{% t pages.index.news.autres %}</p>
+            </a>
+        </div>
     </div>
 </div>
 <div class="about_yog_section">
