--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ layout: default
             {% endfor %}
         </div>
         <div class="more-news-button">
-            <a rel="noopener noreferrer" href="https://www.lausanne2020.com/fr/news">
-                <p class="news_more">{% t pages.index.news.autres %}</p>
+            <a class="more-news-btn" rel="noopener noreferrer" href="https://www.lausanne2020.com/fr/news">
+                {% t pages.index.news.autres %}
             </a>
         </div>
     </div>
