Added Social Media Feed title

--- a/index.html
+++ b/index.html
@@ -85,18 +85,20 @@ layout: default
 </div>
 <div class="social_feed_section social_wall">
     <div class='container'>
-        {% social_wall
+        <h1 class="h1_big_news">{% t pages.index.socialwall.title %}</h1>
+ 
+            {% social_wall
         
-            fb_username:lausanne2020,
-            fb_amount:3,
+                fb_username:lausanne2020,
+                fb_amount:3,
 
-            tw_username:lausanne2020,
-            tw_amount:3,
+                tw_username:lausanne2020,
+                tw_amount:3,
 
-            insta_username:2041300508,
-            insta_amount:3
+                insta_username:2041300508,
+                insta_amount:3
         
-        %}
+            %}
     </div>
 </div>
 <div class="newsletter_cta">
