Changed color for Social Media Feed title

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ layout: default
 </div>
 <div class="social_feed_section social_wall">
     <div class='container'>
-        <h1 class="h1_big_news">{% t pages.index.socialwall.title %}</h1>
+        <h1 class="h1_big_news" style="color:white;">{% t pages.index.socialwall.title %}</h1>
  
             {% social_wall
         
