Added Ski Mountaineering text

--- a/about.html
+++ b/about.html
@@ -350,6 +350,7 @@ layout: default
         </div>
       </div>
     </div>
+    <p class="about_the_yog_p new_sport">{% t pages.about.sports_new %}</p>
     <p class="about_the_yog_p descr_pictos">{% t pages.about.sports_fin %}</p>
   </div>
 </div>
