Added warning image

--- a/about.html
+++ b/about.html
@@ -350,7 +350,10 @@ layout: default
         </div>
       </div>
     </div>
-    <p class="about_the_yog_p new_sport">{% t pages.about.sports_new %}</p>
+    <div class="new_sport">
+      <img src="/images/about/warning.png" height="25" alt="">
+      <p class="about_the_yog_p new_sport">{% t pages.about.sports_new %}</p>
+    </div>
     <p class="about_the_yog_p descr_pictos">{% t pages.about.sports_fin %}</p>
   </div>
 </div>
