--- a/about.html
+++ b/about.html
@@ -352,7 +352,7 @@ layout: default
     </div>
     <div class="new_sport">
       <img src="/images/about/warning.png" height="40" alt="">
-      <p class="about_the_yog_p new_sport">{% t pages.about.sports_new %}</p>
+      <p class="new_sport_text">{% t pages.about.sports_new %}</p>
     </div>
     <p class="about_the_yog_p descr_pictos">{% t pages.about.sports_fin %}</p>
   </div>
