--- a/about.html
+++ b/about.html
@@ -84,3 +84,8 @@ layout: default
     </div>
   </div>
 </div>
+<div class="heritage">
+  <div class="container">
+    <h1>{% t pages.about.heritageTitle %}</h1>
+  </div>
+</div>
