--- a/about.html
+++ b/about.html
@@ -86,6 +86,6 @@ layout: default
 </div>
 <div class="heritage">
   <div class="container">
-    <h1>{% t pages.about.heritageTitle %}</h1>
+    <h1>{% t pages.about.heritage.title %}</h1>
   </div>
 </div>
