--- a/sports.html
+++ b/sports.html
@@ -319,8 +319,12 @@ layout: default
       </div>
     </div>
     <div class="new_sport">
-      <img src="/images/about/warning.png" height="40" alt="">
-      <p class="new_sport_text">{% t pages.about.sports_new %}</p>
+      <div class="new_sport_img">
+        <img src="/images/about/warning.png" height="40" alt="">
+      </div>
+      <div class="new_sport_text">
+        <p>{% t pages.about.sports_new %}</p>
+      </div>
     </div>
     <p class="about_the_yog_p descr_pictos">{% t pages.about.sports_fin %}</p>
   </div>
