Suppressed new_sport image

--- a/sports.html
+++ b/sports.html
@@ -319,10 +319,7 @@ layout: default
       </div>
     </div>
     <div class="new_sport">
-      <div class="new_sport_img">
-        <img src="/images/about/warning.png" height="40" alt="">
-      </div>
-      <div class="new_sport_text">
+      <div class="new_sport_txt">
         <p>{% t pages.about.sports_new %}</p>
       </div>
     </div>
