--- a/venues.html
+++ b/venues.html
@@ -26,16 +26,12 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
                   {% else %} {{ section1.lienSite1En }} {% endif %}'>
           <div class="inside">
-              <div class="title">
-                {{section1.titreSite1}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section1.descriptionSite1 }} {% elsif site.lang == "de" %} {{ section1.descriptionSite1De }}
-                {% else %} {{ section1.descriptionSite1En }} {% endif %}
-              </div>
             <div class="img">
               <img src="{{ section1.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite1.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite1.description}}" />
+            </div>
+            <div class "txt_venues">
+              {{section1.titreSite1}}
             </div>
           </div>
         </a>
