--- a/venues.html
+++ b/venues.html
@@ -30,8 +30,10 @@ layout: default
               <img src="{{ section1.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite1.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite1.description}}" />
             </div>
-            <div class "txt_venues">
-              {{section1.titreSite1}}
+            <div class "box">
+              <div class "text">
+                {{section1.titreSite1}}
+              </div>  
             </div>
           </div>
         </a>
