--- a/venues.html
+++ b/venues.html
@@ -31,8 +31,8 @@ layout: default
                 alt="{{section1.imageSite1.description}}" />
             </div>
           </div>
-          <div class "box">
-            <div class "text">
+          <div class="box">
+            <div class="text">
               {{section1.titreSite1}}
             </div>  
           </div>
