--- a/venues.html
+++ b/venues.html
@@ -32,28 +32,30 @@ layout: default
             </div>
           </div>
         </a>
-        <div class="box">
-            {{section1.titreSite1}}
-        </div>
+        <a title="{{section1.titreSite1}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
+          {% else %} {{ section1.lienSite1En }} {% endif %}'>
+          <div class="box">
+              {{section1.titreSite1}}
+          </div>
+        </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
           {% else %} {{ section1.lienSite2En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section1.titreSite2}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section1.descriptionSite2 }} {% elsif site.lang == "de" %} {{ section1.descriptionSite2De }}
-                {% else %} {{ section1.descriptionSite2En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section1.imageSite2.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite2.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite2.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite2.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite2.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
+          {% else %} {{ section1.lienSite2En }} {% endif %}'>
+          <div class="box">
+              {{section1.titreSite2}}
           </div>
         </a>
       </div>
@@ -62,19 +64,17 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
           {% else %} {{ section1.lienSite3En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section1.titreSite3}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section1.descriptionSite3 }} {% elsif site.lang == "de" %} {{ section1.descriptionSite3De }}
-                {% else %} {{ section1.descriptionSite3En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section1.imageSite3.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite3.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite3.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite3.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite3.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
+          {% else %} {{ section1.lienSite3En }} {% endif %}'>
+          <div class="box">
+              {{section1.titreSite3}}
           </div>
         </a>
       </div>
@@ -83,19 +83,17 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
           {% else %} {{ section1.lienSite4En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section1.titreSite4}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section1.descriptionSite4 }} {% elsif site.lang == "de" %} {{ section1.descriptionSite4De }}
-                {% else %} {{ section1.descriptionSite4En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section1.imageSite4.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite4.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite4.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite4.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite4.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
+          {% else %} {{ section1.lienSite4En }} {% endif %}'>
+          <div class="box">
+              {{section1.titreSite4}}
           </div>
         </a>
       </div>
@@ -128,19 +126,17 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
           {% else %} {{ section2.lienSite1En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section2.titreSite1}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section2.descriptionSite1 }} {% elsif site.lang == "de" %} {{ section2.descriptionSite1De }}
-                {% else %} {{ section2.descriptionSite1En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section2.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite1.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite1.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
+          {% else %} {{ section2.lienSite1En }} {% endif %}'>
+          <div class="box">
+              {{section2.titreSite1}}
           </div>
         </a>
       </div>
@@ -149,19 +145,17 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
           {% else %} {{ section2.lienSite2En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section2.titreSite2}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section2.descriptionSite2 }} {% elsif site.lang == "de" %} {{ section2.descriptionSite2De }}
-                {% else %} {{ section2.descriptionSite2En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section2.imageSite2.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite2.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite2.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite2.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite2.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
+          {% else %} {{ section2.lienSite2En }} {% endif %}'>
+          <div class="box">
+              {{section2.titreSite2}}
           </div>
         </a>
       </div>
@@ -170,19 +164,17 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
           {% else %} {{ section2.lienSite3En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section2.titreSite3}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section2.descriptionSite3 }} {% elsif site.lang == "de" %} {{ section2.descriptionSite3De }}
-                {% else %} {{ section2.descriptionSite3En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section2.imageSite3.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite3.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite3.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite3.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite3.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
+          {% else %} {{ section2.lienSite3En }} {% endif %}'>
+          <div class="box">
+              {{section2.titreSite3}}
           </div>
         </a>
       </div>
@@ -191,19 +183,17 @@ layout: default
             href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
           {% else %} {{ section2.lienSite4En }} {% endif %}'>
           <div class="inside">
-            <div class="hover">
-              <div class="title">
-                {{section2.titreSite4}}
-              </div>
-              <div class="description">
-                {% if site.lang == "fr" %} {{ section2.descriptionSite4 }} {% elsif site.lang == "de" %} {{ section2.descriptionSite4De }}
-                {% else %} {{ section2.descriptionSite4En }} {% endif %}
-              </div>
-            </div>
             <div class="img">
               <img src="{{ section2.imageSite4.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite4.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite4.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite4.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite4.description}}" />
             </div>
+          </div>
+        </a>
+        <a title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
+          {% else %} {{ section2.lienSite4En }} {% endif %}'>
+          <div class="box">
+              {{section2.titreSite4}}
           </div>
         </a>
       </div>
