--- a/venues.html
+++ b/venues.html
@@ -30,13 +30,9 @@ layout: default
               <img src="{{ section1.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite1.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite1.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section1.titreSite1}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
-          {% else %} {{ section1.lienSite1En }} {% endif %}'>
-          <div class="box">
-              {{section1.titreSite1}}
+            <div class="text">
+              {{section1.titreSite2}}
+            </div>
           </div>
         </a>
       </div>
