--- a/venues.html
+++ b/venues.html
@@ -22,15 +22,15 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite1}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section1.titreSite1}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
           {% else %} {{ section1.lienSite1En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section1.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite1.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite1.description}}" />
             </div>
-            <div class="text">
+            <div class="textSite">
               {{section1.titreSite2}}
             </div>
           </div>
