--- a/venues.html
+++ b/venues.html
@@ -31,7 +31,7 @@ layout: default
                 alt="{{section1.imageSite1.description}}" />
             </div>
             <div class="textSite">
-              {{section1.titreSite2}}
+              {{section1.titreSite1}}
             </div>
           </div>
         </a>
@@ -40,18 +40,14 @@ layout: default
         <a class="sqr" title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
           {% else %} {{ section1.lienSite2En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section1.imageSite2.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite2.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite2.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite2.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite2.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
-          {% else %} {{ section1.lienSite2En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section1.titreSite2}}
+            </div>
           </div>
         </a>
       </div>
@@ -59,18 +55,14 @@ layout: default
         <a class="sqr" title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
           {% else %} {{ section1.lienSite3En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section1.imageSite3.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite3.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite3.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite3.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite3.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
-          {% else %} {{ section1.lienSite3En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section1.titreSite3}}
+            </div>
           </div>
         </a>
       </div>
@@ -78,18 +70,14 @@ layout: default
         <a class="sqr" title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
           {% else %} {{ section1.lienSite4En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section1.imageSite4.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite4.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite4.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite4.url }}?w=700&h=700&q=80 700w"
                 alt="{{section1.imageSite4.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
-          {% else %} {{ section1.lienSite4En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section1.titreSite4}}
+            </div>
           </div>
         </a>
       </div>
@@ -121,18 +109,14 @@ layout: default
         <a class="sqr" title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
           {% else %} {{ section2.lienSite1En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section2.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite1.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite1.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
-          {% else %} {{ section2.lienSite1En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section2.titreSite1}}
+            </div>
           </div>
         </a>
       </div>
@@ -140,18 +124,14 @@ layout: default
         <a class="sqr" title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
           {% else %} {{ section2.lienSite2En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section2.imageSite2.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite2.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite2.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite2.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite2.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
-          {% else %} {{ section2.lienSite2En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section2.titreSite2}}
+            </div>
           </div>
         </a>
       </div>
@@ -159,18 +139,14 @@ layout: default
         <a class="sqr" title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
           {% else %} {{ section2.lienSite3En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section2.imageSite3.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite3.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite3.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite3.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite3.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
-          {% else %} {{ section2.lienSite3En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section2.titreSite3}}
+            </div>
           </div>
         </a>
       </div>
@@ -178,18 +154,14 @@ layout: default
         <a class="sqr" title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
           {% else %} {{ section2.lienSite4En }} {% endif %}'>
-          <div class="inside">
-            <div class="img">
+          <div class="blockSite">
+            <div class="imgSite">
               <img src="{{ section2.imageSite4.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite4.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite4.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite4.url }}?w=700&h=700&q=80 700w"
                 alt="{{section2.imageSite4.description}}" />
             </div>
-          </div>
-        </a>
-        <a title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
-          {% else %} {{ section2.lienSite4En }} {% endif %}'>
-          <div class="box">
+            <div class="textSite">
               {{section2.titreSite4}}
+            </div>
           </div>
         </a>
       </div>
