--- a/venues.html
+++ b/venues.html
@@ -37,7 +37,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
           {% else %} {{ section1.lienSite2En }} {% endif %}'>
           <div class="blockSite">
@@ -52,7 +52,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
           {% else %} {{ section1.lienSite3En }} {% endif %}'>
           <div class="blockSite">
@@ -67,7 +67,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
           {% else %} {{ section1.lienSite4En }} {% endif %}'>
           <div class="blockSite">
@@ -106,7 +106,7 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
           {% else %} {{ section2.lienSite1En }} {% endif %}'>
           <div class="blockSite">
@@ -121,7 +121,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
           {% else %} {{ section2.lienSite2En }} {% endif %}'>
           <div class="blockSite">
@@ -136,7 +136,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
           {% else %} {{ section2.lienSite3En }} {% endif %}'>
           <div class="blockSite">
@@ -151,7 +151,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
+        <a class="lienSite" title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
             href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
           {% else %} {{ section2.lienSite4En }} {% endif %}'>
           <div class="blockSite">
