--- a/about.html
+++ b/about.html
@@ -85,7 +85,13 @@ layout: default
   </div>
 </div>
 <div class="heritage">
-  <div class="container">
+  <div class="container fade-in-module">
     <h1>{% t pages.about.heritage.title %}</h1>
+    <div class="about-content">
+      <div class="about-text">
+        {% capture text %}{%t pages.about.heritage.txt1 %}{% endcapture %}
+        {% capture text %}{%t pages.about.heritage.txt2 %}{% endcapture %}
+      </div>
+    </div>
   </div>
 </div>
