--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ layout: default
 </div>
 <div class="heritage">
   <div class="container fade-in-module">
-    <h1>{% t pages.about.heritage.title %}</h1>
+    <h1>{% t pages.about.heritage.title1 %}</h1>
     <div class="about-content">
       <div class="about-text">
         {% capture text %}{%t pages.about.heritage.txt1 %}{% endcapture %}
