--- a/about.html
+++ b/about.html
@@ -89,8 +89,7 @@ layout: default
     <h1>{% t pages.about.heritage.title1 %}</h1>
     <div class="about-content">
       <div class="about-text">
-        {% capture text %}{%t pages.about.heritage.txt1 %}{% endcapture %}
-        {% capture text %}{%t pages.about.heritage.txt2 %}{% endcapture %}
+        {%t pages.about.heritage.txt1 %}
       </div>
     </div>
   </div>
