--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@ layout: default
 <div class="heritage">
   <div class="container fade-in-module">
     <h1>{% t pages.about.heritage.title1 %}</h1>
-    <div class="about-content">
+    <div class="about-content flex vcenter">
       <div class="about-text">
         {% capture text %}{%t pages.about.heritage.txt1 %}{% endcapture %}
         <p>{{ text | markdownify }}</p>
