--- a/about.html
+++ b/about.html
@@ -89,12 +89,10 @@ layout: default
     <h1>{% t pages.about.heritage.title1 %}</h1>
     <div class="about-content">
       <div class="about-text">
-        {% capture text %}{%t pages.about.heritage.txt1 %}{% endcapture %}
-        <p>{{ text | markdownify }}</p>
+        <p>{%t pages.about.heritage.txt1 %}</p>
       </div>
       <div class="about-text">
-        {% capture text %}{%t pages.about.heritage.txt2 %}{% endcapture %}
-        <p>{{ text | markdownify }}</p>
+        {%t pages.about.heritage.txt2 %}
       </div>
     </div>
   </div>
