--- a/about.html
+++ b/about.html
@@ -89,10 +89,10 @@ layout: default
     <h1>{% t pages.about.heritage.title1 %}</h1>
     <div class="about-content">
       <div class="about-text">
-        <p>{%t pages.about.heritage.txt1 %}</p>
+        <p style="margin-top:50px;">{%t pages.about.heritage.txt1 %}</p>
       </div>
       <div class="about-text">
-        {%t pages.about.heritage.txt2 %}
+        <p>{%t pages.about.heritage.txt2 %}</p>
       </div>
     </div>
   </div>
