--- a/about.html
+++ b/about.html
@@ -95,5 +95,16 @@ layout: default
         <p>{%t pages.about.heritage.txt2 %}</p>
       </div>
     </div>
+    <div class="heritage-images">
+      <div class="himage1">
+        <img src="/images/about/photo_CIO.jpg" alt="">
+      </div>
+      <div class="himage2">
+        <img src="/images/about/photo_CIO.jpg" alt="">
+      </div>
+      <div class="himage3">
+        <img src="/images/about/photo_CIO.jpg" alt="">
+      </div>
+    </div>
   </div>
 </div>
