--- a/about.html
+++ b/about.html
@@ -97,13 +97,13 @@ layout: default
     </div>
     <div class="heritage-images">
       <div class="himage1">
-        <img src="/images/about/photo_CIO.jpg" alt="">
+        <img src="/images/about/heritage/vortex1.jpg" alt="">
       </div>
       <div class="himage2">
-        <img src="/images/about/photo_CIO.jpg" alt="">
+        <img src="/images/about/heritage/vortex2.jpg" alt="">
       </div>
       <div class="himage3">
-        <img src="/images/about/photo_CIO.jpg" alt="">
+        <img src="/images/about/heritage/vortex3.jpg" alt="">
       </div>
     </div>
   </div>
