--- a/about.html
+++ b/about.html
@@ -106,5 +106,23 @@ layout: default
         <img src="/images/about/heritage/vortex3.jpg" alt="">
       </div>
     </div>
+    <div class="about-content">
+      <div class="about-text">
+        <p>{%t pages.about.heritage.txt3 %}</p>
+      </div>
+    </div>
+    <div class="heritage-images">
+      <div class="himage4">
+        <img src="/images/about/heritage/vortex2.jpg" alt="">
+      </div>
+      <div class="himage5">
+        <img src="/images/about/heritage/vortex3.jpg" alt="">
+      </div>
+    </div>
+    <div class="about-content">
+      <div class="about-text">
+        <p>{%t pages.about.heritage.txt4 %}</p>
+      </div>
+    </div>
   </div>
 </div>
