--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ layout: default
     </div>
     <div class="about-content">
       <div class="about-text">
-        <p>{%t pages.about.heritage.txt4 %}</p>
+        <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
       </div>
     </div>
   </div>
