--- a/about.html
+++ b/about.html
@@ -123,6 +123,21 @@ layout: default
       <div class="about-text">
         <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
       </div>
+      <div class="about-text" id="Hliste">
+        <p style="margin-top: 50px;">{%t pages.about.heritage.list1 %}</p>
+      </div>
+      <div class="about-text" id="Hliste">
+        <p style="margin-top: 50px;">{%t pages.about.heritage.list2 %}</p>
+      </div>
+      <div class="about-text" id="Hliste">
+        <p style="margin-top: 50px;">{%t pages.about.heritage.list3 %}</p>
+      </div>
+      <div class="about-text" id="Hliste">
+        <p style="margin-top: 50px;">{%t pages.about.heritage.list4 %}</p>
+      </div>
+      <div class="about-text" id="Hliste">
+        <p style="margin-top: 50px;">{%t pages.about.heritage.list5 %}</p>
+      </div>
     </div>
   </div>
 </div>
