--- a/about.html
+++ b/about.html
@@ -124,19 +124,19 @@ layout: default
         <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
       </div>
       <div class="about-text" id="Hliste">
-        <p style="margin-top: 50px;">{%t pages.about.heritage.list1 %}</p>
+        <p>{%t pages.about.heritage.list1 %}</p>
       </div>
       <div class="about-text" id="Hliste">
-        <p style="margin-top: 50px;">{%t pages.about.heritage.list2 %}</p>
+        <p>{%t pages.about.heritage.list2 %}</p>
       </div>
       <div class="about-text" id="Hliste">
-        <p style="margin-top: 50px;">{%t pages.about.heritage.list3 %}</p>
+        <p>{%t pages.about.heritage.list3 %}</p>
       </div>
       <div class="about-text" id="Hliste">
-        <p style="margin-top: 50px;">{%t pages.about.heritage.list4 %}</p>
+        <p>{%t pages.about.heritage.list4 %}</p>
       </div>
       <div class="about-text" id="Hliste">
-        <p style="margin-top: 50px;">{%t pages.about.heritage.list5 %}</p>
+        <p>{%t pages.about.heritage.list5 %}</p>
       </div>
     </div>
   </div>
