--- a/about.html
+++ b/about.html
@@ -125,18 +125,13 @@ layout: default
       </div>
       <div class="about-text" id="Hliste">
         <p>{%t pages.about.heritage.list1 %}</p>
-      </div>
-      <div class="about-text" id="Hliste">
         <p>{%t pages.about.heritage.list2 %}</p>
-      </div>
-      <div class="about-text" id="Hliste">
         <p>{%t pages.about.heritage.list3 %}</p>
-      </div>
-      <div class="about-text" id="Hliste">
         <p>{%t pages.about.heritage.list4 %}</p>
-      </div>
-      <div class="about-text" id="Hliste">
         <p>{%t pages.about.heritage.list5 %}</p>
+      </div>
+      <div class="heritage-images">
+        <img src="/images/about/heritage/vortex3.jpg" alt="">
       </div>
     </div>
   </div>
