--- a/about.html
+++ b/about.html
@@ -123,14 +123,14 @@ layout: default
       <div class="about-text">
         <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
       </div>
-      <div class="about-text" id="Hliste">
+      <div class="about-text" id="hList">
         <p>{%t pages.about.heritage.list1 %}</p>
         <p>{%t pages.about.heritage.list2 %}</p>
         <p>{%t pages.about.heritage.list3 %}</p>
         <p>{%t pages.about.heritage.list4 %}</p>
         <p>{%t pages.about.heritage.list5 %}</p>
       </div>
-      <div class="heritage-images">
+      <div class="heritage-images" id="hListImg">
         <img src="/images/about/heritage/vortex3.jpg" alt="">
       </div>
     </div>
