--- a/about.html
+++ b/about.html
@@ -123,6 +123,8 @@ layout: default
       <div class="about-text">
         <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
       </div>
+    </div>
+    <div class="about-content">
       <div class="about-text" id="hList">
         <p>{%t pages.about.heritage.list1 %}</p>
         <p>{%t pages.about.heritage.list2 %}</p>
