--- a/about.html
+++ b/about.html
@@ -107,16 +107,17 @@ layout: default
       </div>
     </div>
     <div class="about-content">
+      <h1>{% t pages.about.heritage.title2 %}</h1>
       <div class="about-text">
         <p>{%t pages.about.heritage.txt3 %}</p>
       </div>
     </div>
     <div class="heritage-images">
       <div class="himage4">
-        <img src="/images/about/heritage/vortex2.jpg" alt="">
+        <img src="/images/about/heritage/malley.JPG" alt="">
       </div>
       <div class="himage5">
-        <img src="/images/about/heritage/vortex3.jpg" alt="">
+        <img src="/images/about/heritage/malley2.JPG" alt="">
       </div>
     </div>
     <div class="about-content">
@@ -133,7 +134,32 @@ layout: default
         <p>{%t pages.about.heritage.list5 %}</p>
       </div>
       <div class="heritage-images" id="hListImg">
-        <img src="/images/about/heritage/vortex3.jpg" alt="">
+        <img src="/images/about/heritage/shorttrack.jpg" alt="">
+      </div>
+    </div>
+    <div class="about-content">
+      <div class="about-text">
+        <p>{%t pages.about.heritage.txt5 %}</p>
+      </div>
+    </div>
+    <div class="about-content">
+      <h1>{% t pages.about.heritage.title3 %}</h1>
+      <div class="about-text">
+        <p>{%t pages.about.heritage.txt6 %}</p>
+      </div>
+      <div class="about-text">
+        <p>{%t pages.about.heritage.txt7 %}</p>
+      </div>
+    </div>
+    <div class="heritage-images">
+      <div class="himage1">
+        <img src="/images/about/heritage/educ1.JPG" alt="">
+      </div>
+      <div class="himage2">
+        <img src="/images/about/heritage/educ2.jpg" alt="">
+      </div>
+      <div class="himage3">
+        <img src="/images/about/heritage/educ3.jpg" alt="">
       </div>
     </div>
   </div>
