--- a/about.html
+++ b/about.html
@@ -132,14 +132,10 @@ layout: default
         <p>{%t pages.about.heritage.list3 %}</p>
         <p>{%t pages.about.heritage.list4 %}</p>
         <p>{%t pages.about.heritage.list5 %}</p>
+        <p>{%t pages.about.heritage.list6 %}</p>
       </div>
       <div class="heritage-images" id="hListImg">
         <img src="/images/about/heritage/shorttrack.jpg" alt="">
-      </div>
-    </div>
-    <div class="about-content">
-      <div class="about-text">
-        <p>{%t pages.about.heritage.txt5 %}</p>
       </div>
     </div>
     <div class="about-content">
