--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@ layout: default
         <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
       </div>
     </div>
-    <div class="about-content">
+    <div class="about-content" style="min-height:500px;">
       <div class="about-text" id="hList">
         <p>{%t pages.about.heritage.list1 %}</p>
         <p>{%t pages.about.heritage.list2 %}</p>
