--- a/about.html
+++ b/about.html
@@ -120,6 +120,10 @@ layout: default
         <img src="/images/about/heritage/malley2.JPG" alt="">
       </div>
     </div>
+    <div class="about-text">
+      <p>Vous pouvez visionner l'avancée des travaux de l'Espace Malley en direct, ou revoir l'intégralité des travaux jusqu'à ce jour en accéléré, en allant voir les webcams du chantier.
+        Pour cela, <a target="_blank" rel="noopener noreferrer" href="https://www.espacemalley.ch/live-webcam/">cliquez ici</a>.
+    </div>
     <div class="about-content">
       <div class="about-text">
         <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
