--- a/about.html
+++ b/about.html
@@ -121,8 +121,7 @@ layout: default
       </div>
     </div>
     <div class="about-text">
-      <p>Vous pouvez visionner l'avancée des travaux de l'Espace Malley en direct, ou revoir l'intégralité des travaux jusqu'à ce jour en accéléré, en allant voir les webcams du chantier.
-        Pour cela, <a target="_blank" rel="noopener noreferrer" href="https://www.espacemalley.ch/live-webcam/">cliquez ici</a>.
+      <p>Vous pouvez visionner l'avancée des travaux de l'Espace Malley en direct, ou revoir l'intégralité des travaux jusqu'à ce jour en accéléré, en allant voir les webcams du chantier. Pour cela, <a target="_blank" rel="noopener noreferrer" href="https://www.espacemalley.ch/live-webcam/">cliquez ici</a>.</p>
     </div>
     <div class="about-content">
       <div class="about-text">
