--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ layout: default
         <h1 class="the_claim">{% t pages.index.title4.part1 %}<br/><span class="accent">{% t pages.index.title4.part2 %}</span></h1>
     </div>
 </div>
+<div class="video_section">
+    <video width="400" controls>
+        <source src="mov_bbb.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+</div>
 <div class="news_section">
     <div class="container">
         <h1 class="h1_big_news">{% t pages.index.news.title %}</h1>
