--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="video_section">
     <video width="400" controls>
-        <source src="https://www.youtube.com/watch?v=hZbclx2ibE8" type="video/mp4">
+        <source src="l2020/videos/WEB_lausanne2020.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
 </div>
