--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     </div>
 </div>
 <div class="video_section">
-    <video width="600" controls poster="/images/home/video.jpg">
+    <video class="home_video" width="600" controls poster="/images/home/video.jpg">
         <source src="/videos/WEB_lausanne2020.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
