--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@ layout: default
     </div>
 </div>
 <div class="video_section">
+    <h1 class="h1_video_section">{% t pages.index.title_video %}</h1>
     <video class="home_video" width="600" controls poster="/images/home/video.jpg">
         <source src="/videos/WEB_lausanne2020.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
+    <p class="info_video_section">{% t pages.index.text_video %}</p>
 </div>
 <div class="news_section">
     <div class="container">
