--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
             Your browser does not support HTML5 video.
         </video>
         <div class="about-more-button">
-            <a class="about-more-btn" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com/de/news/the-lausanne-2020-generation">
+            <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com/de/news/the-lausanne-2020-generation">
                 {% t pages.index.text_video %}
             </a>
         </div>
