--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ layout: default
       </div>
     </div>
     <div class="about-text">
-      <p>{%t pages.about.heritage.webcam1 %} ' ' <a target="_blank" rel="noopener noreferrer" href="https://www.espacemalley.ch/live-webcam/">   {%t pages.about.heritage.webcam1link %}</a></p>
+      <p>{%t pages.about.heritage.webcam1 %}   <a target="_blank" rel="noopener noreferrer" href="https://www.espacemalley.ch/live-webcam/">   {%t pages.about.heritage.webcam1link %}</a></p>
     </div>
     <div class="about-content">
       <div class="about-text">
