--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
         </video>
         <div class="about-more-button">
             <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" 
-               {% if site.lang == "fr" %} {{href="https://www.lausanne2020.com/fr/news/the-lausanne-2020-generation"}} 
-                            {% elsif site.lang == "de" %} {{href="https://www.lausanne2020.com/de/news/the-lausanne-2020-generation"}} 
-                            {% else %} {{href="https://www.lausanne2020.com/news/the-lausanne-2020-generation"}} {% endif %}>
+               {% if site.lang == "fr" %} href="https://www.lausanne2020.com/fr/news/the-lausanne-2020-generation" 
+                            {% elsif site.lang == "de" %} href="https://www.lausanne2020.com/de/news/the-lausanne-2020-generation"
+                            {% else %} href="https://www.lausanne2020.com/news/the-lausanne-2020-generation" {% endif %}>
                 {% t pages.index.text_video %} 
             </a>
         </div>
