--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@ layout: default
             Your browser does not support HTML5 video.
         </video>
         <div class="about-more-button">
-            <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" 
-               {% if site.lang == "fr" %} href="https://www.lausanne2020.com/fr/news/the-lausanne-2020-generation" 
-                            {% elsif site.lang == "de" %} href="https://www.lausanne2020.com/de/news/the-lausanne-2020-generation"
-                            {% else %} href="https://www.lausanne2020.com/news/the-lausanne-2020-generation" {% endif %}>
+            <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com">
                 {% t pages.index.text_video %} 
             </a>
         </div>
