Added skimp pinto

--- a/sports.html
+++ b/sports.html
@@ -316,11 +316,16 @@ layout: default
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="new_sport">
-      <div class="new_sport_txt">
-        <p>{% t pages.about.sports_new %}</p>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="/images/about/sports/skimo.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <p class="about_the_yog_p descr_pictos">{% t pages.about.sports_fin %}</p>
