--- a/sports.html
+++ b/sports.html
@@ -108,6 +108,16 @@ layout: default
             </div>
           </div>
         </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="/images/about/sports/skimo.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="col-md-4">
         <div class="col-md-12 col-xs-6">
