--- a/sports.html
+++ b/sports.html
@@ -111,6 +111,14 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
+            </div>
+            <div class="col-md-9">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
               <img src="/images/about/sports/skimo.png">
             </div>
             <div class="col-md-9">
@@ -273,6 +281,14 @@ layout: default
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}" target="_blank">{% t pages.about.sports.saut-a-ski.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-9">
             </div>
           </div>
         </div>
