--- a/sports.html
+++ b/sports.html
@@ -111,8 +111,10 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
+              &nbsp;
             </div>
             <div class="col-md-9">
+              &nbsp;
             </div>
           </div>
         </div>
@@ -287,8 +289,10 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
+              &nbsp;
             </div>
             <div class="col-md-9">
+              &nbsp;
             </div>
           </div>
         </div>
