--- a/sports.html
+++ b/sports.html
@@ -108,7 +108,7 @@ layout: default
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-xs-6">
+        <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
               &nbsp;
@@ -118,7 +118,7 @@ layout: default
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-xs-6">
+        <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
               <img src="/images/about/sports/skimo.png">
@@ -286,7 +286,7 @@ layout: default
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-xs-6">
+        <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
               &nbsp;
@@ -296,7 +296,7 @@ layout: default
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-xs-6">
+        <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
               <img src="/images/about/sports/skimo.png">
