--- a/sports.html
+++ b/sports.html
@@ -121,7 +121,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="/images/about/sports/skimo.png">
+              <img style="padding:3px;" src="/images/about/sports/skimo.png">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
@@ -299,7 +299,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="/images/about/sports/skimo.png">
+              <img style="padding:3px;" src="/images/about/sports/skimo.png">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
