--- a/sports.html
+++ b/sports.html
@@ -111,10 +111,10 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img style="padding:3px;" src="/images/about/sports/skimo.png">
+              <img id="skimo" src="/images/about/sports/skimo.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
+              <a class="links_sports" id="skimo_txt" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
             </div>
           </div>
         </div>
