--- a/sports.html
+++ b/sports.html
@@ -108,13 +108,13 @@ layout: default
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-xs-6">
+        <div class="col-md-6 col-xs-6" id="skimo_txt">
           <div class="pictos-grp row">
             <div class="col-md-3">
               <img id="skimo" src="/images/about/sports/skimo.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" id="skimo_txt" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.skimo.link %}" target="_blank">{% t pages.about.sports.skimo.text %}</a>
             </div>
           </div>
         </div>
